# llsd-java

./: .gitignore  ENHANCED_FEATURES.md  MODERN_FEATURES.md  MULTI_LANGUAGE_VIEWER_IMPLEMENTATION.md  README.md  SECOND_LIFE_LIBRARIES.md  SECOND_LIFE_VIEWER_RESEARCH_AND_IMPROVEMENTS.md  VIEWER_USAGE.md  pom.xml
scripts/: README.md  resolve-conflicts.sh
src/main/java/lindenlab/llsd/: Color4.java  LLSD.java  LLSDBinaryParser.java  LLSDBinarySerializer.java  LLSDDemo.java  LLSDExample.java  LLSDException.java  LLSDFormat.java  LLSDJsonParser.java  LLSDJsonSerializer.java  LLSDNotationParser.java  LLSDNotationSerializer.java  LLSDParser.java  LLSDSerializationFactory.java  LLSDSerializer.java  LLSDType.java  LLSDUndefined.java  LLSDUtils.java  LLSDXMLSerializer.java  Quaternion.java  SecondLifeException.java  Vector2.java  Vector3.java  Vector4.java  VectorTypes.java
src/main/reactjs/: jest.config.js  package-lock.json  package.json  tsconfig.json
src/main/reactjs/src/: binaryParser.ts  binarySerializer.ts  index.ts  types.ts  xmlParser.ts  xmlSerializer.ts
src/main/reactjs/src/firestorm/: FirestormLLSDUtils.ts
src/main/reactjs/tests/: binary.test.ts  extensions.test.ts  setup.ts  types.test.ts  xml.test.ts
src/main/rust/: Cargo.toml  README.md
src/main/rust/benches/: llsd_benchmarks.rs
src/main/rust/examples/: basic_usage.rs
src/main/rust/src/: binary.rs  error.rs  firestorm.rs  json.rs  lib.rs  secondlife.rs  types.rs  utils.rs  xml.rs
src/main/rust/src/viewer/: cache.rs  rendering.rs
src/main/rust/tests/: integration_tests.rs
(+70 files in other folders)
